[package]
name = "indexed-ring-buffer"
version = "0.1.1"
authors = ["fxborg"]
edition = "2018"
description = "An indexed multiple readable spsc ring buffer."
documentation = "https://docs.rs/indexed-ring-buffer/"
homepage = "https://github.com/fxborg/indexed-ring-buffer"
repository = "https://github.com/fxborg/indexed-ring-buffer.git"
readme = "README.md"
keywords = ["ring-buffer", "spsc"]
categories = ["concurrency", "data-structures"]
license = "MIT/Apache-2.0"

[dependencies]
parking_lot = "0.10"
