[package]
authors = ["fxborg"]
categories = ["concurrency", "data-structures"]
description = "An indexed multiple readable spsc ring buffer."
documentation = "https://docs.rs/indexed-ring-buffer/"
edition = "2018"
homepage = "https://github.com/fxborg/indexed-ring-buffer"
keywords = ["ring-buffer", "spsc"]
license = "MIT/Apache-2.0"
name = "indexed-ring-buffer"
readme = "README.md"
repository = "https://github.com/fxborg/indexed-ring-buffer.git"
version = "0.1.2"

[dependencies.parking_lot]
version = "0.10"

[dev-dependencies.criterion]
version = "0.2"
[dev-dependencies.lazy_static]
version = "1.3"

[[bench]]
name = "bench"
harness = false

